# HeliosDB-Proxy

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.claude/skills/: _template.md
.github/workflows/: ci.yml  crates-io.yml  docker.yml  release.yml
benches/: BASELINE.md  pooling.rs  protocol.rs  routing.rs
benchmarks/: README.md  bench-engines.sh  heliosdb-nano-vs-postgresql-2026-06-28.md
benchmarks/results/: bulk-load-copy.tsv  drop-table-100k.tsv  select1.tsv  storage-read.tsv
config/: proxy.example.toml  proxy.full.toml  proxy.postgres.toml
demos/: README.md
demos/bank-ledger/: README.md  audit.sh  chaos.sh  docker-compose.yml  proxy.toml  schema.sql  workers.sh
demos/chaos-failover/: README.md  chaos.sh  dashboard.sh  docker-compose.yml  proxy.toml  verify.sh  workload.sh
demos/impossible-query/: README.md  demo.sh  docker-compose.yml  proxy.toml
demos/lag-aware-routing/: README.md  docker-compose.yml  induce-lag.sh  init-hba.sh  observe.sh  proxy.toml
demos/live-talk/: PRE_REQUISITES.md  README.md  module-map.md
demos/v0.4.0/: README.md
demos/vs-pgbouncer/: README.md  docker-compose.yml  pgbouncer.ini  proxy.toml  report-template.md  run-compare.sh  userlist.txt
docker/: Dockerfile  docker-compose.yml
docker/init/: 00-replication-setup.sh
docs/: admin-api.md  architecture.md  configuration.md  feature-flags.md  research-ai-platform-teams.md  rfc-t2.1.md  topology-providers.md  transaction-replay.md  website-brief-v0.3.1.md  website-brief-v0.4.0.md
docs/audit-2026-06/: BATCH-C-pool-data-path.md  BATCH-G-differentiator-features.md  BATCH-G2-pg-to-nano-migration-mirror.md  BATCH-H-ops-dx-quick-wins.md  IMPLEMENTATION-CLOSEOUT.md  audit-result.json  batch-e-verdicts.json
docs/deployment/: docker.md  kubernetes.md  standalone.md
docs/internal/: audit.md  rfc-zero-downtime-upgrades.md  website-brief-platform-modules.md
docs/perf-2026-07/: GROUP-1-hotpath-allocs.md  GROUP-2-pool-release.md  GROUP-2C-conditional-reset.md  GROUP-3-relay-eventing.md  GROUP-3B-idle-relay.md  GROUP-4-stability-hardening.md  GROUP-4B-stability-completion.md  GROUP-5-feature-layer-efficiency.md  GROUP-A1-gateway-hardening.md  GROUP-A2-admin-exposure.md  GROUP-D-edge-proxy.md  NEXT-BATCH-audit.md  README.md
examples/failover-demo/: README.md  docker-compose.yml  proxy.toml
examples/multi-tenant/: README.md  proxy.toml
examples/postgres-cluster/: README.md  docker-compose.yml  proxy.toml
operator/: README.md
scripts/: gen-config.sh  health-check.sh
scripts/regress/: admin-auth-test.sh  admin-reuseport-test.sh  analytics-test.sh  bench-scalability.sh  branch-test.sh  cache-test.sh  cancel-test.sh  circuit-breaker-test.sh  conditional-reset-test.sh  copy-formats-test.sh  copy-poolmode-test.sh  copy-test.sh  cutover-test.sh  drain-timeout-test.sh  edge-proxy-test.sh  flush-latency-test.sh  gateway-hardening-test.sh  graphql-test.sh  handoff-test.sh  hba-test.sh  http-gw-test.sh  ldap-test.sh  malformed-input-test.sh  mcp-test.sh  mirror-test.sh  notify-test.sh  plugin-install-test.sh  pool-modes-test.sh  prepared-stmt-test.sh  proxy-edge-edge.toml  proxy-edge-home.toml  proxy-nano.toml  proxy-pg-analytics.toml  proxy-pg-cache.toml  proxy-pg-circuit.toml  proxy-pg-graphql.toml  proxy-pg-poolmodes.toml  proxy-pg-ratelimit.toml  proxy-pg-reliability.toml  proxy-pg-rewrite.toml  (+24 more)
src/: admin.rs  admin_ui.html  agent_contract.rs  auth_scram.rs  batch.rs  branch.rs  client_tls.rs  config.rs  connection_pool.rs  cursor_restore.rs  failover_controller.rs  failover_replay.rs  graphql_gateway.rs  health_checker.rs  http_gateway.rs  http_util.rs  lib.rs  load_balancer.rs  main.rs  mcp.rs  mirror.rs  pipeline.rs  plugin_registry.rs  primary_tracker.rs  protocol.rs  request.rs  server.rs  session_migrate.rs  skills.rs  switchover_buffer.rs  transaction_journal.rs
src/analytics/: config.rs  fingerprinter.rs  histogram.rs  intent.rs  metrics.rs  mod.rs  patterns.rs  slow_log.rs  statistics.rs
src/anomaly/: ewma.rs  mod.rs  sql_injection.rs
src/auth/: api_keys.rs  config.rs  credentials.rs  handler.rs  jwt.rs  mod.rs  oauth.rs  role_mapper.rs  session.rs
src/backend/: auth.rs  client.rs  error.rs  mod.rs  stream.rs  tls.rs  types.rs
src/cache/: config.rs  hints.rs  invalidation.rs  l1_hot.rs  l2_warm.rs  l3_semantic.rs  metrics.rs  mod.rs  normalizer.rs  result.rs
src/circuit_breaker/: adaptive.rs  agent.rs  breaker.rs  config.rs  manager.rs  metrics.rs  mod.rs  sliding_counter.rs  state.rs
src/distribcache/: classifier.rs  config.rs  heatmap.rs  invalidator.rs  metrics.rs  mod.rs  prefetcher.rs  scheduler.rs
src/edge/: cache.rs  client.rs  fingerprint.rs  mod.rs  registry.rs
src/graphql/: config.rs  dataloader.rs  engine.rs  introspector.rs  metrics.rs  mod.rs  resolver.rs  sql_generator.rs  validation.rs
src/lag/: config.rs  metrics.rs  mod.rs  monitor.rs  router.rs  ryw.rs
src/multi_tenancy/: config.rs  identifier.rs  isolation.rs  metrics.rs  mod.rs  pool.rs  transformer.rs
src/plugins/: config.rs  host_functions.rs  host_imports.rs  hot_reload.rs  loader.rs  metrics.rs  mod.rs  runtime.rs  sandbox.rs
src/pool/: backend_pool.rs  config.rs  hardening.rs  lease.rs  manager.rs  metrics.rs  mod.rs  mode.rs  prepared.rs  reset.rs  session.rs  statement.rs  transaction.rs
src/rate_limit/: agent.rs  concurrency.rs  config.rs  cost_estimator.rs  limiter.rs  metrics.rs  mod.rs  sliding_window.rs  token_bucket.rs
src/replay/: mod.rs
src/rewriter/: config.rs  matcher.rs  metrics.rs  mod.rs  parser.rs  rules.rs  transformer.rs
src/routing/: config.rs  hint_parser.rs  metrics.rs  mod.rs  node_filter.rs  query_router.rs
src/schema_routing/: admin.rs  analyzer.rs  classifier.rs  discovery.rs  metrics.rs  mod.rs  registry.rs  router.rs
src/shadow_execute/: mod.rs
src/upgrade_orchestrator/: mod.rs
terraform/: README.md
tests/: wasm_plugin_e2e.rs
tests/docker/: README.md  checksum.sh  cluster.yml  pgbench-chaos.sh  primary-init.sh  proxy.toml  run-scenarios.sh  scenarios.yml  standby-init.sh  (+3 more)
(+104 files in other folders)
